<resources>
    <string name="app_name">Coffee Monitor</string>
    <string name="title_dashboard">Types</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_statistics">Statistics</string>
    <string name="apppkg" translatable="false">com.fexed.coffeemonitor</string>
    <string name="aggiungitxt">Add</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="liters">Liters/Milligrams</string>
    <string name="liquid">Liquid</string>
    <string name="resetdb">Reset Database</string>
    <string name="showstat">Show statistics</string>
    <string name="sostanza">Substance</string>
    <string name="price">Price</string>
    <string name="addtype">Add type</string>
    <string name="added">%s added</string>
    <string name="placeholder">Various data placeholder</string>
    <string name="Tazzebevutepertipo">Drunk cups for each type</string>
    <string-array name="funfacts">
        <item>"It looks like that the elephants love coffee"</item>
        <item>"The <b>Black Ivory</b> is coffee made from the dung of those elephants that eat coffee berries. It sells for 1100$/Kg."</item>
        <item>"Finland is the country that consumes most coffee, with <b>10Kg per capita per year</b>."</item>
        <item>"Coffee has at least 1000 chemical compunds, some of them are still being studied by the scientific community."</item>
        <item>"Drinking too much coffee can kill you, but you have to drink between 80 and 100 cups in 4 hours."</item>
        <item>"Drinking coffee reduces risk of prostate and breast cancer, a study from Lund University and Harvard School of Public Healt says."</item>
        <item>"According to Harvard School of Public Health, coffee acts as antidepressant: people who drinks 2–4 cups per day have 50% less possibility of killing themselves."</item>
        <item>"Prince Charles of England is a supporter of coffee enemas as anticancer cure. You can buy the self kit on Amazon."</item>
        <item>"A coupls of coffee cups improve attention and cognitive ability"</item>
        <item> "Historically, coffee consumption appears to have originated from the nomadic Ethiopian population of the <b> Oromo </b> in the first millennium, which made energy bars made up of ground coffee beans and animal fat." </item>
        <item> "In 2009, Durham University noted that students who drink three cups of coffee a day are three times more likely to hear voices and be subjected to out-of-body experiences." </item>
        <item> "Johann Sebastian Bach wrote the Kaffeekantate in honor of his love of coffee." </item>
        <item> "In the world almost 1.6 billion cups of coffee are consumed every day." </item>
        <item> "The large cup of Starbucks coffee (the half-liter one) contains the caffeine equivalent of 9 cans and a half of Coca Cola." </item>
        <item> "They consider the process of growth and the treatment of the beans, to produce a cup of coffee you need about 140l of water." </item>
        <item> "By 2080, highland forests in Ethiopia and Sudan, where most of the wild coffee grows, could disappear due to ongoing climate change." </item>
        <item> "The only species of coffee to be naturally decaffeinated is native to Cameroon and is called Coffea Charrieriana." </item>
        <item> "70% of the coffee that is consumed today comes from the Coffea Arabica species." </item>
        <item> Researchers at Tel Aviv University have discovered that coffee inhibits the growth of a bacterium that causes halitosis. "</item>
        <item> "There is an average of 10 times more cafes per person in Seattle than in the rest of the US." </item>
        <item> "In America, on average, every consumer drinks 3.1 cups of coffee a day." </item> 
        <item> "Italy has the highest number of bars per person compared to any other country in the world: 100,000 bars for 60 million people." </item>
        <item> "Most of the coffee from the countries that consume it comes from Eje Cafetero, or Colombian Coffee Board." </item>
        <item> "In 2001, Brazil created a coffee-scented postal stamp." </item>
        <item> "The first reference to coffee by a European was made in 1573 by the German botanist Leohnard Rauwolf." </item>
        <item> "After the Siege of Vienna, the first café in the city was opened in 1683: coffee was produced with the beans lost by the Turks during the retreat." </item>
        <item> "Vietnam is the second largest coffee producer in the world, after Brazil." </item>
        <item> "The Portuguese colonizers introduced coffee plantations in Brazil at the beginning of the 19th century." </item>
        <item> "In the 1970s, coffee was regarded as a substitute for opium in Thailand." </item>
        <item> "In Norway there is a phenomenon called" <i> Statoil koppen </i>, where people buy water bottles at Statoil stations and get free coffee in exchange all year round at any Statoil point of the Norway. "</item>
        <item> "In the 20s coffee kiosks are banned from the streets of Melbourne because of their close connection with crime." </item>
        <item> "Melbourne's coffee culture was introduced by Italian and Greek immigrants, who used bars as a meeting place and were often associated with crime." </item>
        <item> "The coffee plantation in the south of Cuba, in the Sierra Maestra mountains, has been declared a world heritage by UNESCO." </item>
        <item> "The spread of coffee in India is attributed to Baba Budan in the seventeenth century during a pilgrimage to Mecca. According to legend, he smuggled 7 coffee beans at the port of Mocha, Yemen." </item>
        <item> "Suggest a funfact too! Send your proposals to <i> federicomatteoni@live.it </i>" </item>
        <item> "In the Netherlands there is the Koffie Verkeerd, which consists of a dose of espresso and two doses of hot milk. Verkeerd means wrong in Dutch, precisely because most of the Dutch believe that coffee should be served with much less milk. "</item>
        <item> "Turkish law once granted divorce to women whose husband refused or forgot to serve them coffee!" </item>
        <item> "Some researchers refer the high life expectancy recorded on the Greek island of Ikaria to the habit of drinking a cup of coffee a day." </item>
        <item> "Coffee is the second most traded commodity in the world. The first is oil" </item>
        <item> "In Africa, coffee beans are left to soak in water, mixed with spices and then served as candies." </item>
        <item> "Brazil is the largest coffee producer in the world, with 44 million bags of coffee a year." </item>
        <item> "Black coffee without sugar or other additives contains 0 calories." </item>
        <item> "An expert in the preparation of Turkish coffee is called <i> kahveci </i>" </item>
        <item> "Both the French and the American Revolution were conceived inside coffee shops." </item>
        <item> "There are so many varieties of tea in the world but they all come from a single plant: the <i> camellia sinensis </i>. </item>
        <item> "After the water, the most drunk drink in the world is tea. This is because it is very easy to produce it and it is typical of very populous countries." </item>
        <item> "Theine and caffeine are actually the exact same thing." </item>
        <item> "In the volume <i> The Etiquette of Modern Society </i>, dated 1841, it was suggested to offer cookies with tea to the guests because they could be consumed more easily than the sandwiches and without having to take off the gloves."</item>
        <item> "There are around 1,500 varieties of tea." </item>
        <item> "On average, the British drink three cups of tea a day." </item>
        <item> "On average, 6.24kg of tea is consumed annually in the Arab Emirates." </item>
        <item> "The inventor of tea bags is a New Yorker named Thomas Sullivan, who invented them in the early 20th century." </item>
    </string-array>
    <string translatable="false" name="funfactssources">gizzeta.it, cafestival.it, momondo.co.uk, essentialwonders.com, healthline.com</string>
    <string translatable="false" name="sources">Jjoe64, Androidplot, Skydoves, Freepik</string>
    <string name="notif">Notifications</string>
    <string name="tips">Tips</string>
    <string name="geoasktitle">Geolocation</string>
    <string name="geoask">You will be asked to give Coffee Monitor access to the geolocation. This will be used only to keep track of where you add the cups, and to visualize the data onto a map. The data will not be stored elsewhere outside your phone.</string>
    <string name="favs">Favourites</string>
    <string name="title_cups">Register</string>
    <string name="selecttype">Select type</string>
    <string name="storico">History</string>
    <string name="giorni_della_settimana">Days of the week</string>
    <string name="tienipremutoedittipologia">Long tap on a field to edit it</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="eliminarecup">Delete \"%s\"?</string>
    <string name="tutorial_dashboard">These are the statistics. Tap on the + in the top right corner to add a cup of coffee!</string>
    <string name="tipsplaceholder">This is a tip. Please treat it nicely</string>
    <string name="tutorial_cups">These are the various cups registered. Press and hold on - to remove one, or press and hold on the name to change it</string>
    <string name="tutorial_types">These are the types. Press on the + in the top right corner to add custom types</string>
    <string name="tutorial_stats">These are the statistics. Tap on graphs to get more informations</string>
    <string name="edit">Edit</string>
    <string name="conferma">Confirm</string>
    <string name="annulla">Cancel</string>
    <string name="notificationdescr" translatable="false">Reminders and tips</string>
    <string name="notificationstitle" translatable="false">Notifications</string>
    <string name="notiftitle">Coffee Monitor Reminder</string>
    <string name="notiftext">Have you registered all the cups you had today?</string>
    <string name="tazzine_totali">Total cups</string>
    <string name="ml_totali">Total amount</string>
    <string name="totalcups_lastmonth">Last month</string>
    <string name="notifica_giornaliera">Daily notification</string>
    <string name="orario_notifica_giornaliera">Daily notification time</string>
    <string name="settings">Settings</string>
    <string name="storico_a_linee_barre">History</string>
    <string name="linee">Lines</string>
    <string name="barre">Bars</string>
    <string name="codice_e_idea_nfederico_matteoni">Code and idea: Federico Matteoni</string>
    <string name="design_nmadalin_necula">Design: Madalin Necula, Federico Matteoni</string>
    <string name="credits">Credits</string>
    <string name="generalstats">General stats</string>
    <string name="toomuchcupstip">You have already drunk more than 5 cups today, which is the maximum recommended dose by the FDA (Food and Drug Administration). Be careful!</string>
    <string name="editdefaultalert">This is a default type! If you confirm the edit, it will be considered a custom type and no will no longer be updated from the internet</string>
    <string name="nameemptyalert">Name cannot be empty</string>
    <string name="defaulttxt">Default</string>
    <string name="dbupdated">Default database updated</string>
    <string name="dbupdatefailed">Default database update failed</string>
    <string name="defaultdbtitle">Default database</string>
    <string name="defaultdbnotavailalert">Default database not available, please try again later.</string>
    <string name="backup">Backup</string>
    <string name="fillfields">Fill in the data for a custom type</string>
    <string name="wdgtxfgprompt">Select which type should be handled by the widget</string>
</resources>